# marki-retrieval

./: README.md  collect_images.py  pyproject.toml
notebooks/: retrieval_demo.ipynb
preparation/: analysis.py  build_index.py  collect_images.py  feature_extractor.py
tests/: test_retrieval.py
webservice/: faiss_backend.py  main.py
webservice/data/: filenames.npy
